--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native": "0.50.3"
   },
   "dependencies": {
+    "native-base": "^2.3.7",
     "prop-types": "^15.6.0",
     "ramda": "^0.25.0"
   }
